<resources>
    <string name="app_name">Task 1</string>

    <string name="hng">Choose</string>
    <string name="intern">Your</string>
    <string name="number">Action</string>

    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>

    <string name="email">E-mail</string>

    <string name="password">Password</string>

    <string name="confirmPassword">Confirm Password</string>

    <string name="register">Register</string>
    <string name="login">Login</string>

    <string name="logining">Already a Member? Login</string>
    <string name="registring">No Account Yet? Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">logout</string>

</resources>
