<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".fragments.HomeFragment"
              android:orientation="vertical"
              android:background="@drawable/login_bk"
              android:paddingBottom="20dp"
              android:paddingLeft="20dp"
              android:paddingRight="20dp"
              android:paddingTop="20dp"
>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="start"
                  android:layout_marginBottom="50dp"
                  android:layout_marginTop="50dp"
    >
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/hng"
                  android:textColor="@color/colorPrimary"
                  android:textSize="50sp"
                  android:layout_gravity="start"
                  android:textStyle="bold"
        />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/intern"
                  android:textColor="#FC8822"
                  android:textSize="50sp"
                  android:layout_gravity="start"
                  android:textStyle="bold|italic"
        />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/number"
                  android:textColor="@color/colorPrimary"
                  android:textSize="50sp"
                  android:layout_gravity="start"
                  android:textStyle="bold"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center"
    >



        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/login_button_background"
                android:id="@+id/loginHomeButton"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
        />

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/register"
                android:background="@drawable/login_button_background"
                android:id="@+id/registerHomeButton"
        />

    </LinearLayout>


</LinearLayout>