<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/login_bk"
        tools:context=".fragments.RegisterFragment"
>


    <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
    >


        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginTop="30dp"
                  android:text="@string/register"
                  android:textSize="30sp"
                  android:textColor="@color/colorPrimary"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="text"
                    android:maxLines="1"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:inputType="text"
                    android:maxLines="1"
            />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLines="1"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:passwordToggleEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"

            />
        </com.google.android.material.textfield.TextInputLayout>


        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/registerFragmentButton"
                android:text="@string/register"
                android:background="@drawable/login_button_background"

        />

        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content"
                  android:layout_marginTop="30dp"
                  android:text="@string/logining"
                  android:textSize="20sp"
                  android:gravity="center"
                  android:id="@+id/fragmentTextViewLogin"
                  android:textColor="@color/colorPrimary"
                  android:clickable="true"
                  android:focusable="true"
        />

    </LinearLayout>


</androidx.core.widget.NestedScrollView>