<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        android:background="@drawable/login_bk"
        tools:context=".fragments.LoginFragment">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:layout_gravity="center"
    >


        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:layout_marginBottom="40dp"
        />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginBottom="20dp"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextEmail_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:maxLines="1"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true"
        >

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextPassword_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/loginFragmentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:background="@drawable/login_button_background"
                android:layout_gravity="right"
        />

        <TextView
                android:id="@+id/fragmentTextViewRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/registring"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:clickable="true"
                android:focusable="true"
        />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>